[package]
name = "game_network"
version = "0.1.0"
authors = ["Jake Askeland <jake.askeland@gmail.com>"]

[lib]
name = "game_network"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "example/main.rs"

[dependencies]
bidir-map = "1.0.0"
bincode = "1.0.0"
log = "0.4"
serde = "1.0.27"
serde_bytes = "0.10.4"
serde_derive = "1.0.27"
spmc = "0.2.2"
